# RacingBrain

./: .gitignore  README.md  README.zh-CN.md  READ_FOR_FUSE.md  READ_FOR_LIO.md  READ_TODO.md  工作介绍.md  科研计划书.doc
LocalizationMapping/PointPillars/trt_cone_detector/: CMakeLists.txt  package.xml
LocalizationMapping/PointPillars/trt_cone_detector/include/trt_cone_detector/: post_processor.hpp  tensor_types.hpp  trt_detector.hpp  voxel_generator.hpp
LocalizationMapping/PointPillars/trt_cone_detector/launch/: infer.launch.py
LocalizationMapping/PointPillars/trt_cone_detector/src/: cone_detector_node.cpp  post_processor.cpp  trt_detector.cpp  voxel_generator.cu
LocalizationMapping/RacingBrain/: README.md  package.xml  setup.cfg  setup.py
LocalizationMapping/RacingBrain/LocalizationMapping/: README.md
LocalizationMapping/RacingBrain/LocalizationMapping/functions/health/: README.md
LocalizationMapping/RacingBrain/LocalizationMapping/functions/localization_mapping_stack/: README.md
LocalizationMapping/RacingBrain/LocalizationMapping/functions/mapping/: README.md
LocalizationMapping/RacingBrain/LocalizationMapping/functions/perception/: README.md
LocalizationMapping/RacingBrain/LocalizationMapping/functions/planning/: README.md
LocalizationMapping/RacingBrain/config/: lio_sam_racingbrain.yaml
LocalizationMapping/RacingBrain/launch/: lio_dataset_eval.launch.py  localization_mapping.launch.py  multisource_localization.launch.py
LocalizationMapping/RacingBrain/racingbrain/: __init__.py  cli.py
LocalizationMapping/RacingBrain/racingbrain/LocalizationMapping/: __init__.py
LocalizationMapping/RacingBrain/racingbrain/LocalizationMapping/functions/: __init__.py
LocalizationMapping/RacingBrain/racingbrain/common/: __init__.py  launching.py  paths.py
LocalizationMapping/RacingBrain/racingbrain/functions/: __init__.py
LocalizationMapping/RacingBrain/racingbrain/functions/health/: __init__.py  function.py
LocalizationMapping/RacingBrain/racingbrain/functions/localization_mapping_stack/: __init__.py  function.py
LocalizationMapping/RacingBrain/racingbrain/functions/mapping/: function.py
LocalizationMapping/RacingBrain/racingbrain/functions/perception/: __init__.py  function.py
LocalizationMapping/RacingBrain/racingbrain/functions/planning/: __init__.py
LocalizationMapping/RacingBrain/racingbrain/health/: monitor.py
LocalizationMapping/RacingBrain/racingbrain/localization/: __init__.py  lio_gnss_error_eval.py  lio_gnss_error_eval_node.py  lio_imu_adapter.py  lio_imu_adapter_node.py  lio_pointcloud_adapter.py  lio_pointcloud_adapter_node.py  local_tangent.py  multisource_pose_judge_node.py  pose_sources.py  ros_geometry.py  simple_lio_core.py  simple_lio_node.py
LocalizationMapping/RacingBrain/racingbrain/perception/: __init__.py  lidar_backend_arbiter.py  lidar_cones_to_map.py  pointpillars_local_verifier.py
LocalizationMapping/RacingBrain/racingbrain/planning/: __init__.py  track_graph_node.py
LocalizationMapping/RacingBrain/test/: test_lio_gnss_error_eval.py  test_lio_imu_adapter.py  test_lio_pointcloud_adapter.py  test_multisource_pose_judge.py  test_simple_lio_core.py
LocalizationMapping/gnss/cpp_pubsub/: CMakeLists.txt  package.xml
LocalizationMapping/gnss/cpp_pubsub/src/: publisher_member_function.cpp  serial_stream.cpp
control/src/cpp_controller/: CMakeLists.txt  package.xml
control/src/cpp_controller/include/cpp_controller/: longitudinal_vp.hpp  vehicle_pid_controller.hpp
control/src/cpp_controller/src/: PID_controller_node.cpp  longitudinal_vp.cpp  vehicle_pid_controller.cpp
control/src/cpp_controller/test/: test_node.py  test_node_ctrl_cmd.py  test_node_fitted.py
control/src/racing_control_bringup/: package.xml  setup.cfg  setup.py
control/src/racing_control_bringup/config/: config_acceleration.yaml  config_autocross.yaml  config_skidpad.yaml  rviz_config.rviz
control/src/racing_control_bringup/launch/: racing_control.launch.py
control/src/simple_pid_controller/: package.xml  setup.cfg  setup.py
control/src/simple_pid_controller/simple_pid_controller/: simple_PID_controller_node.py  vehicle_pid_controller.py
gnss/cpp_pubsub/: CMakeLists.txt  README.md  package.xml
gnss/cpp_pubsub/include/cpp_pubsub/: macros.h  stream.h
gnss/cpp_pubsub/src/: publisher_member_function.cpp  serial_stream.cpp  subscriber_member_function.cpp
gnss/gnss_ins_msg/: CMakeLists.txt  README.md  package.xml
gnss/gnss_ins_msg/msg/: Gnssins.msg  Gnssins64.msg
perception/src/cone_segmentation_test_3d/src/test_cone_segmentation/: CMakeLists.txt  README.md  package.xml
perception/src/cone_ws/src/cone_detector/: README.md  (+2 more)
perception/src/fs_fusion_box/: CMakeLists.txt  README.md  package.xml
perception/src/fs_fusion_box/config/: calibration.yaml
perception/src/fs_fusion_box/launch/: fusion_box.launch.py
perception/src/fs_fusion_box/src/: fs_fusion_box_math.cpp  fs_fusion_box_node.cpp
perception/src/run_perception/: README.md  package.xml  setup.cfg  setup.py
perception/src/run_perception/launch/: system_run.launch.py
perception/src/run_perception/resource/: run_perception
perception/src/run_perception/run_perception/: __init__.py
perception/src/run_perception/test/: test_copyright.py  test_flake8.py  test_pep257.py
slam/drd25_msgs/: CMakeLists.txt  README.md  package.xml
slam/drd25_msgs/msg/: Cone.msg  Map.msg  Path.msg  Point.msg  Pointcloud.msg  Waypoint.msg
slam/slam/: CMakeLists.txt  README.md  package.xml
slam/slam/config/: acceleration.yaml  autocross.yaml  export.yaml  params.yaml  skidpad.yaml
slam/slam/include/slam/: loop_closure_detector.hpp  pointcloud_builder.hpp
slam/slam/launch/: slam.launch.py
slam/slam/meshes/: README.md  cone.dae
slam/slam/rviz/: slam.rviz
slam/slam/src/: loop_closure_detector.cpp  pointcloud_builder.cpp  slam_node.cpp
src/slam/: CMakeLists.txt
src/slam/config/: acceleration.yaml  autocross.yaml  params.yaml  skidpad.yaml
src/slam/include/slam/: loop_closure_detector.hpp
src/slam/launch/: slam.launch.py
src/slam/src/: loop_closure_detector.cpp  slam_node.cpp
(+197 files in other folders)
