<?xml version="1.0"?>
<package format="3">
  <name>cpp_pubsub</name>
  <version>0.0.0</version>
  <description>TODO: GNSS / INS driver bridge for the rebuilt pipeline.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- TODO: 根据实现补充 rclcpp、sensor_msgs、gnss_ins_msg 等依赖 -->
</package>
