<?xml version="1.0"?>
<package format="3">
  <name>gnss_ins_msg</name>
  <version>0.0.0</version>
  <description>TODO: GNSS / INS message definitions for the rebuilt pipeline.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- TODO: 打开消息生成时补充这些依赖 -->
  <!-- <build_depend>rosidl_default_generators</build_depend> -->
  <!-- <exec_depend>rosidl_default_runtime</exec_depend> -->
  <!-- <depend>std_msgs</depend> -->

  <!-- <member_of_group>rosidl_interface_packages</member_of_group> -->
</package>
