<?xml version="1.0"?>
<package format="3">
  <name>drd25_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Shared mapping interfaces for perception and SLAM.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- TODO: 打开接口生成时补充 rosidl 与 std_msgs / geometry_msgs 等依赖 -->
</package>
