<?xml version="1.0"?>
<package format="3">
  <name>slam</name>
  <version>0.0.0</version>
  <description>TODO: SLAM and global map reconstruction package.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- TODO: 根据实现补充 rclcpp、tf2、nav_msgs、visualization_msgs、
       gnss_ins_msg、drd25_msgs、PCL 等依赖 -->
</package>
