<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trt_cone_detector</name>
  <version>0.0.1</version>
  <description>TensorRT FP16 PointPillars LiDAR cone detector.</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>test_cone_segmentation</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
