<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_pid_controller</name>
  <version>0.0.0</version>
  <description>Python fallback PID controller for the RacingBrain control stack.</description>
  <maintainer email="2754710939@qq.com">crp</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <exec_depend>python3-numpy</exec_depend>
  <depend>fs_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>drd25_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
