<?xml version="1.0"?>
<package format="3">
  <name>fs_fusion_box</name>
  <version>0.0.0</version>
  <description>TODO: Camera-LiDAR fusion package.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- TODO: 补 rclcpp、tf2、Eigen、vision_msgs、drd25_msgs 等依赖 -->
</package>
