<?xml version="1.0"?>
<package format="3">
  <name>run_perception</name>
  <version>0.0.0</version>
  <description>TODO: Perception launch package.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
</package>
