<?xml version="1.0"?>
<package format="3">
  <name>test_cone_segmentation</name>
  <version>0.0.0</version>
  <description>TODO: LiDAR cone segmentation package.</description>
  <maintainer email="todo@example.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- TODO: 补 rclcpp、sensor_msgs、PCL、消息依赖 -->
</package>
