<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cone_detector</name>
  <version>0.0.0</version>
  <description>ROS 2 camera cone detector based on Ultralytics YOLO.</description>
  <maintainer email="159146102+yupengsky@users.noreply.github.com">yupeng</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>cone_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
